--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-bootstrap-sidebar",
-  "version": "1.0.16",
+  "name": "vue-sidebar-bootstrap",
+  "version": "1.0.17",
   "description": "Create a mobile friendly sidebar layout for Bootstrap Vue.",
   "author": "Daniel Kiss",
   "keywords": [
